cmake_minimum_required(VERSION 3.12)
project(elf)

set(LIBELF_REPOSITORY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/src/libelf")

function(libElfMain)
  add_library("${PROJECT_NAME}" STATIC EXCLUDE_FROM_ALL
    "${LIBELF_REPOSITORY_ROOT}/elf32_checksum.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_fsize.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_getchdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_getehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_getphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_getshdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_newehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_newphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_offscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_updatefile.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_updatenull.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_xlatetof.c"
    "${LIBELF_REPOSITORY_ROOT}/elf32_xlatetom.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_checksum.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_fsize.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_getchdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_getehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_getphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_getshdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_newehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_newphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_offscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_updatefile.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_updatenull.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_xlatetof.c"
    "${LIBELF_REPOSITORY_ROOT}/elf64_xlatetom.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_begin.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_clone.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_cntl.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_compress.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_compress_gnu.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_end.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_error.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_fill.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagdata.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagelf.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_flagshdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getarhdr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getaroff.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getarsym.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getbase.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getdata.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getdata_rawchunk.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getident.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getphdrnum.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getshdrnum.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_getshdrstrndx.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_gnu_hash.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_hash.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_kind.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_memory.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_ndxscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_newdata.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_newscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_next.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_nextscn.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_rand.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_rawdata.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_rawfile.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_readall.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_scnshndx.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_strptr.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_update.c"
    "${LIBELF_REPOSITORY_ROOT}/elf_version.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_checksum.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_fsize.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getauxv.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getchdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getclass.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getdyn.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getlib.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getmove.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getnote.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getrela.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getrel.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getshdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getsym.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getsyminfo.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getsymshndx.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getverdaux.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getverdef.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getvernaux.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getverneed.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_getversym.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_newehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_newphdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_offscn.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_auxv.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_dyn.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_ehdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_lib.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_move.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_phdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_rela.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_rel.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_shdr.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_sym.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_syminfo.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_symshndx.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_verdaux.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_verdef.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_vernaux.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_verneed.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_update_versym.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_xlate.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_xlatetof.c"
    "${LIBELF_REPOSITORY_ROOT}/gelf_xlatetom.c"
    "${LIBELF_REPOSITORY_ROOT}/libelf_crc32.c"
    "${LIBELF_REPOSITORY_ROOT}/libelf_next_prime.c"
    "${LIBELF_REPOSITORY_ROOT}/nlist.c"
  )

  target_link_libraries("${PROJECT_NAME}" PUBLIC zlib)
  target_compile_definitions("${PROJECT_NAME}" PRIVATE HAVE_CONFIG_H)
  target_compile_options("${PROJECT_NAME}" PRIVATE -Wno-error -g0)

  target_include_directories("${PROJECT_NAME}" PUBLIC
    "${LIBELF_REPOSITORY_ROOT}"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/includes"
  )
endfunction()

libElfMain()
